added marketGainers and marketLosers